# diesel-factories

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  TODO.md  docker-compose.yaml
.github/workflows/: ci.yml
diesel-factories/: Cargo.toml  README.md
diesel-factories-code-gen/: Cargo.toml  README.md
diesel-factories-code-gen/src/: lib.rs
diesel-factories/src/: lib.rs
diesel-factories/tests/: associations.rs  docs_setup.rs  docs_setup_with_city_factory.rs  integration_test.rs  path_name_models.rs
diesel-factories/tests/compile_fail/: foreign_key_name_on_non_association.rs  foreign_key_name_on_non_association.stderr
diesel-factories/tests/compile_pass/: alternative_fk_name.rs  alternative_pk_name.rs  auto_pick_fields.rs  basic.rs  change_foreign_key_name.rs  empty_factory.rs  factory_containing_reference.rs  macaddr.rs  map_fields.rs  no_pk.rs  path_name_models.rs  type_field_name.rs
migrations/2019-05-06-130337_create_users/: up.sql
migrations/2019-05-07-092232_add_countries/: down.sql  up.sql
migrations/2019-05-10-072830_cities/: down.sql  up.sql
migrations/2020-04-14-095023_change_pk_colname/: down.sql  up.sql
migrations/2021-11-22-030926_create_visited_cities/: down.sql  up.sql
src/: schema.rs
