[package]
name = "diesel-factories-code-gen"
version = "0.0.1"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"
description = "Internals for diesel-factories"
license = "MIT"

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15.26"
darling = "0.9.0"
regex = "1.1.6"
heck = "0.3.1"

[lib]
proc-macro = true
