[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["database"]
description = "Internals for diesel-factories"
documentation = "https://docs.rs/diesel-factories"
edition = "2018"
homepage = "https://github.com/davidpdrsn/diesel-factories"
license = "MIT"
name = "diesel-factories-code-gen"
readme = "README.md"
repository = "https://github.com/davidpdrsn/diesel-factories.git"
version = "1.0.1"

[dependencies]
proc-macro2 = "^0.4"
quote = "^0.6"
syn = "^0.15"
darling = "^0.9"
regex = "^1.1"
heck = "^0.3"

[lib]
proc-macro = true
