[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["database"]
description = "Internals for diesel-factories"
documentation = "https://docs.rs/diesel-factories"
edition = "2018"
homepage = "https://github.com/davidpdrsn/diesel-factories"
license = "MIT"
name = "diesel-factories-code-gen"
readme = "README.md"
repository = "https://github.com/davidpdrsn/diesel-factories.git"
version = "2.0.0"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
heck = "0.3"
bae = "0.1"

[lib]
proc-macro = true
