[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["database"]
description = "Test factories for Diesel"
documentation = "https://docs.rs/diesel-factories"
edition = "2018"
homepage = "https://github.com/davidpdrsn/diesel-factories"
keywords = ["web", "diesel", "sql"]
license = "MIT"
name = "diesel-factories"
readme = "README.md"
repository = "https://github.com/davidpdrsn/diesel-factories.git"
version = "1.0.1"

[dependencies]
diesel = { version = "^1" }
diesel-factories-code-gen = { version = "1.0.1", path = "../diesel-factories-code-gen" }

[dev_dependencies]
diesel = { version = "^1.3", features = ["postgres"] }
trybuild = "1.0.3"
