[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["database"]
description = "Test factories for Diesel"
documentation = "https://docs.rs/diesel-factories"
edition = "2018"
homepage = "https://github.com/davidpdrsn/diesel-factories"
keywords = ["web", "diesel", "sql"]
license = "MIT"
name = "diesel-factories"
readme = "README.md"
repository = "https://github.com/davidpdrsn/diesel-factories.git"
version = "2.0.0"

[dependencies]
diesel = { version = "2" }
diesel-factories-code-gen = { version = "2.0.0", path = "../diesel-factories-code-gen" }

[dev_dependencies]
diesel = { version = "2", features = ["postgres", "network-address"] }
trybuild = "1.0.3"
